; ModuleID = '/home/carl/AnghaBench/linux/drivers/power/avs/extr_smartreflex.c_sr_modify_reg.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/power/avs/extr_smartreflex.c_sr_modify_reg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.omap_sr = type { i64, i32 }

@SR_TYPE_V1 = common dso_local global i64 0, align 8
@ERRCONFIG_V1 = common dso_local global i32 0, align 4
@ERRCONFIG_STATUS_V1_MASK = common dso_local global i32 0, align 4
@SR_TYPE_V2 = common dso_local global i64 0, align 8
@ERRCONFIG_V2 = common dso_local global i32 0, align 4
@ERRCONFIG_VPBOUNDINTST_V2 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.omap_sr*, i32, i32, i32)* @sr_modify_reg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sr_modify_reg(%struct.omap_sr* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.omap_sr*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.omap_sr* %0, %struct.omap_sr** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load %struct.omap_sr*, %struct.omap_sr** %5, align 8
  %11 = getelementptr inbounds %struct.omap_sr, %struct.omap_sr* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* @SR_TYPE_V1, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %23

15:                                               ; preds = %4
  %16 = load i32, i32* %6, align 4
  %17 = load i32, i32* @ERRCONFIG_V1, align 4
  %18 = icmp eq i32 %16, %17
  br i1 %18, label %19, label %23

19:                                               ; preds = %15
  %20 = load i32, i32* @ERRCONFIG_STATUS_V1_MASK, align 4
  %21 = load i32, i32* %7, align 4
  %22 = or i32 %21, %20
  store i32 %22, i32* %7, align 4
  br label %38

23:                                               ; preds = %15, %4
  %24 = load %struct.omap_sr*, %struct.omap_sr** %5, align 8
  %25 = getelementptr inbounds %struct.omap_sr, %struct.omap_sr* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = load i64, i64* @SR_TYPE_V2, align 8
  %28 = icmp eq i64 %26, %27
  br i1 %28, label %29, label %37

29:                                               ; preds = %23
  %30 = load i32, i32* %6, align 4
  %31 = load i32, i32* @ERRCONFIG_V2, align 4
  %32 = icmp eq i32 %30, %31
  br i1 %32, label %33, label %37

33:                                               ; preds = %29
  %34 = load i32, i32* @ERRCONFIG_VPBOUNDINTST_V2, align 4
  %35 = load i32, i32* %7, align 4
  %36 = or i32 %35, %34
  store i32 %36, i32* %7, align 4
  br label %37

37:                                               ; preds = %33, %29, %23
  br label %38

38:                                               ; preds = %37, %19
  %39 = load %struct.omap_sr*, %struct.omap_sr** %5, align 8
  %40 = getelementptr inbounds %struct.omap_sr, %struct.omap_sr* %39, i32 0, i32 1
  %41 = load i32, i32* %40, align 8
  %42 = load i32, i32* %6, align 4
  %43 = add i32 %41, %42
  %44 = call i32 @__raw_readl(i32 %43)
  store i32 %44, i32* %9, align 4
  %45 = load i32, i32* %7, align 4
  %46 = xor i32 %45, -1
  %47 = load i32, i32* %9, align 4
  %48 = and i32 %47, %46
  store i32 %48, i32* %9, align 4
  %49 = load i32, i32* %7, align 4
  %50 = load i32, i32* %8, align 4
  %51 = and i32 %50, %49
  store i32 %51, i32* %8, align 4
  %52 = load i32, i32* %8, align 4
  %53 = load i32, i32* %9, align 4
  %54 = or i32 %53, %52
  store i32 %54, i32* %9, align 4
  %55 = load i32, i32* %9, align 4
  %56 = load %struct.omap_sr*, %struct.omap_sr** %5, align 8
  %57 = getelementptr inbounds %struct.omap_sr, %struct.omap_sr* %56, i32 0, i32 1
  %58 = load i32, i32* %57, align 8
  %59 = load i32, i32* %6, align 4
  %60 = add i32 %58, %59
  %61 = call i32 @__raw_writel(i32 %55, i32 %60)
  ret void
}

declare dso_local i32 @__raw_readl(i32) #1

declare dso_local i32 @__raw_writel(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
